# governance-app

./: .env.bk  .gitignore  .lockfile-lintrc.json  .npmrc  .prettierrc  Cargo.toml  HACKING.md  README.md  canister_ids.json  config.json  dfx.json  governance_app_backend.wasm  ledger-init.did  package-lock.json  package.json  tsconfig.json
.github/: pull_request_template.md
.github/workflows/: build.yaml  check.yaml  checks.yaml  checks.yaml.disabled  deploy.yaml  e2e.yml  pipeline_dev.yaml  pipeline_main.yaml  playwright.yml  pr_checks.yml  snapshots.yml  test-action.yaml  update-snapshots.yml
@types/: i18n-resources.d.ts  i18next.d.ts
docker/: Dockerfile.base  Dockerfile.build
docs/: DEPLOY.md  DEPLOY.new.md  DEVELOP.md  ERRORS.md  FE.md  HARDWARE_WALLET_PLAN.md  REPRODUCIBILITY.md
init-arguments/: icp-ledger.did
scripts/: build.sh  config.sh  download-pocket-ic.sh  download-sns_testing_bundle.sh  generate-ledger-init.sh  init-replica.sh  pocketic-server.sh  release-prod  start-pocket-ic.sh  start-server.sh  update-snapshots.sh
src/governance-app-backend/: Cargo.toml  backend.did
src/governance-app-backend/src/: address_book.rs  assets.rs  exchange_rate.rs  lib.rs  tvl.rs  user_data.rs
src/governance-app-backend/src/address_book/: tests.rs
src/governance-app-backend/src/canisters/: governance.rs
src/governance-app-backend/src/exchange_rate/: cache.rs  mod.rs  tests.rs  time.rs  xrc_client.rs
src/governance-app-backend/src/tvl/: state.rs
src/governance-app-frontend/: .prettierignore  .prettierrc  components.json  eslint.config.js  index.html  (+5 more)
(+677 files in other folders)
