[package]
name = "governance-app-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
testnet = []

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.19"
ic-http-certification = "3.0"
ic-asset-certification = "3.0.3"
include_dir = "0.7"
ic-stable-structures = "0.7.2"
ic-ledger-types = "0.16"
icrc-ledger-types = "0.1.12"
serde = { version = "1.0.219", features = ["derive"] }
regex = "1.11"
